--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.1",
-    "@angular/cdk": "^11.2.7",
+    "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.1.1",
     "@angular/compiler": "~11.1.1",
     "@angular/core": "~11.1.1",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.1.1",
     "@angular/material": "^11.2.7",
     "@angular/platform-browser": "~11.1.1",
